# trec-text-rs

./: Cargo.toml  README.md
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/iter/traits/double_ended/: trait.DoubleEndedIterator.js
docs/implementors/core/iter/traits/exact_size/: trait.ExactSizeIterator.js
docs/implementors/core/iter/traits/iterator/: trait.Iterator.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/anyhow/: backtrace.rs.html  chain.rs.html  context.rs.html  error.rs.html  fmt.rs.html  kind.rs.html  lib.rs.html  macros.rs.html  wrapper.rs.html
docs/src/trec_text/: lib.rs.html
docs/trec_text/: all.html  index.html  sidebar-items.js  struct.DocumentRecord.html  struct.Parser.html  type.Result.html
src/: lib.rs
