[package]
name = "trec-text"
version = "0.1.0" # remember to update html_root_url
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"
description = "TREC Text collection format parser"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pisa-engine/trec-text-rs"
keywords = ["parser", "trec"]

[dependencies]
anyhow = "1.0"
